2013-04-04  Araki Ken  <arakiken@users.sf.net>

	* doc/en/README.fb, doc/ja/README.fb: Updated.

	* fb/x_imagelib.c: The bug which disabled sixel graphic images in 16bpp
	  is fixed.

	* x_main_config.c: --contrast, --gamma, --bright and --pic options are
	  removed if configure with --disable-image option.

	* main_loop.c: "wskbd_repeat_1" and "wskbd_repeat_N" options are added
	  in NetBSD framebuffer.

	* x_event_loop.c: addional_fds::handler() is called every 50ms in NetBSD
	  framebuffer.

	* fb/x.h, fb/x_display.c, fb/x_window.c: Support for NetBSD framebuffer.

	* ml_logical_visual.c: Inline pictures are correctly shown if use_dynamic_comb
	  option is true.

2013-03-24  Araki Ken  <arakiken@users.sf.net>

	* x_screen_manager.c: If term hasn't been attached to screen yet,
	  ml_term_change_encoding() is called instead of
	  ml_term_write_loopback("\x1b]5379;encoding=...\x07") in open_pty_intern().

	* fb/x_display.c: _mouse.button_state is reset when button is released
	  in FreeBSD.

	* version.h.in: 3.1.9 -> 3.1.9 post

2013-03-23  Araki Ken  <arakiken@users.sf.net>

	* 3.1.9 released.
	  (tag "rel-3_1_9")

	* configure.in, mlterm.spec, main/version.h.in,
	  doc/en/ReleaseNote: updated for 3.1.9.

	* libptyssh/ml_pty_ssh.c:
	  gethostbyname() is used if getaddrinfo() doesn't exist.

	* win32/x.h: VK_OEM_{1|3|4} macros are defined.

	* script/config.guess, mkf/script/config.guess, kiklib/script/config.guess,
	  script/config.sub, mkf/script/config.sub, kiklib/script/config.sub:
	  Updated (timestamp='2013-02-12')

	* etc/main, etc/main.ja: Updated.

2013-03-22  Araki Ken  <arakiken@users.sf.net>

	* libptyssh/ml_pty_ssh.c: If libssh2_channel_{write|read}() returns
	  LIBSSH2_ERROR_SOCKET_RECV, call kik_trigger_sig_child().

2013-03-21  Araki Ken  <arakiken@users.sf.net>

	* x_shortcut.c: The bug which ignored ButtonMask in x_shortcut_match()
	  is fixed.

	* etc/key: Examples are added.
